Consul implementation, apply payment discount with request to Discounts MS, apply jwt security globally, role check for every path
