# app.py
@@ -7,9 +7,17 @@ from flask_sqlalchemy import SQLAlchemy
 from datetime import datetime
 import time
 import jwt
+import requests
+import json
+
+from consul_functions import get_host_name_IP, get_consul_service, register_to_consul
+
+
 
 SECRET = 'SECRETSTUFF'
 APIKEY = 'PAYMENT_APIKEY'
+
+
 
 
 def has_role(arg):
@@ -18,8 +26,8 @@ def has_role(arg):
         def decode_view(*args, **kwargs):
             try:
                 headers = request.headers
-                if 'AUTHORIZATION' in headers:
-                    token = headers['AUTHORIZATION'].split(' ')[1]
+                if 'Authorization' in headers:
+                    token = headers['Authorization'].split(' ')[1]
                     decoded_token = decode_token(token)
                     if 'admin' in decoded_token:
                         return fn(*args, **kwargs)
@@ -40,27 +48,25 @@ def decode_token(token):
     return jwt.decode(token, SECRET, algorithms='HS256')
 
 
-def hello_world(name: str) -> str:
-    return 'Hello World! {name}'.format(name=name)
-
-
+@has_role(['payments'])
 def find_all_transactions():
     transactions = Transaction.query.all()
     if transactions:
         return transactions_to_json_array(transactions), 200
     else:
-        return {'message': 'error'}, 404
+        return {'Message': 'No transactions'}, 404
 
 
+@has_role(['payments'])
 def find_user_transactions(user_id):
     transactions = Transaction.query.filter_by(user_id=user_id).all()
     if transactions:
         return transactions_to_json_array(transactions), 200
     else:
-        return {'message': '{} not found'.format(user_id)}, 404
+        return {'message': 'No transactions'.format(user_id)}, 404
 
 
-@has_role(['invoice'])
+@has_role(['invoices'])
 def transaction_details(transaction_id):
     transaction = Transaction.query.filter_by(id=transaction_id).first()
     if transaction:
@@ -69,6 +75,7 @@ def transaction_details(transaction_id):
         return {'message': 'error not found'}, 404
 
 
+@has_role(['payments'])
 def edit_transaction(transaction_id, transaction_body):
     transaction = Transaction.query.filter_by(id=transaction_id).first()
     if transaction:
@@ -83,10 +90,18 @@ def edit_transaction(transaction_id, transaction_body):
         return {'message': 'error not found'}, 404
 
 
+@has_role(['payments'])
 def save_transaction(transaction_body):
+
+    user_id = transaction_body['user_id']
+    user = UserPayments.query.filter_by(id=user_id).first()
+    if user is None:
+        user = UserPayments(id=user_id, funds=0)
+        db.session.add(user)
+
     transaction = Transaction(date=datetime.now(),
                               amount=transaction_body['amount'],
-                              user=UserPayments.query.filter_by(id=transaction_body['user_id']).first(),
+                              user=user,
                               completed=transaction_body['completed'])
     db.session.add(transaction)
     db.session.commit()
@@ -94,6 +109,7 @@ def save_transaction(transaction_body):
     return transaction_to_json(transaction), 200
 
 
+@has_role(['shopping_cart'])
 def cart_payment_status(transaction_id):
     transaction = db.session.query(Transaction).filter_by(id=transaction_id).first()
     if transaction:
@@ -102,6 +118,7 @@ def cart_payment_status(transaction_id):
         return {'message': 'error not found'}, 404
 
 
+@has_role(['shopping_cart', 'reserve'])
 def rent_payment_status(transaction_id):
     transaction = db.session.query(Transaction).filter_by(id=transaction_id).first()
     if transaction:
@@ -110,6 +127,7 @@ def rent_payment_status(transaction_id):
         return {'message': 'error not found'}, 404
 
 
+@has_role(['payments'])
 def find_all_user_payment_methods(user_id):
     payment_methods = PaymentMethods.query.filter_by(user_id=user_id).all()
     if payment_methods:
@@ -118,14 +136,15 @@ def find_all_user_payment_methods(user_id):
         return {'message': 'error not found'}, 404
 
 
+@has_role(['payments'])
 def save_user_payment_method(user_id, user_payment_method):
     user = UserPayments.query.filter_by(id=user_id).first()
     if not user:
         user = UserPayments(id=user_id, funds=0)
         db.session.add(user)
-        return insert_payment_method(user_payment_method, user_id), 200
+        return insert_payment_method(user_payment_method, user_id)
     else:
-        return insert_payment_method(user_payment_method, user_id), 200
+        return insert_payment_method(user_payment_method, user_id)
 
 
 def insert_payment_method(user_payment_method, user_id):
@@ -154,31 +173,7 @@ def insert_payment_method(user_payment_method, user_id):
     return payment_method_to_json(payment_method), 200
 
 
-def check_if_credit_card_exists(payment_method):
-    curr_card_type = CardType.master
-    if payment_method.card_type == "visa":
-        curr_card_type = CardType.visa
-
-    credit_cards = CreditCards.query.filter_by(user_id=payment_method.user_id,
-                                               cc_number=payment_method.cc_number,
-                                               cvc=payment_method.cvc,
-                                               valid_month=payment_method.valid_month,
-                                               valid_year=payment_method.valid_year,
-                                               card_type=curr_card_type).count()
-    if credit_cards > 0:
-        return True
-    return False
-
-
-def check_if_paypal_exists(user_id, email, password):
-    paypals = PayPal.query.filter_by(user_id=user_id)
-
-    for paypal in paypals:
-        if paypal.email == email and paypal.check_password(password):
-            return True
-    return False
-
-
+@has_role(['payments'])
 def find_user_payment_method_by_id(method_id):
     payment_method = PaymentMethods.query.filter_by(id=method_id).first()
     if payment_method:
@@ -187,6 +182,7 @@ def find_user_payment_method_by_id(method_id):
         return {'message': 'error not found'}, 404
 
 
+@has_role(['payments'])
 def delete_user_payment_method(method_id):
     payment_method = PaymentMethods.query.filter_by(id=method_id).first()
     if payment_method:
@@ -203,8 +199,10 @@ def auth_microservice(auth_body_microservice):
     apikey = auth_body_microservice['apikey']
 
     if apikey == 'PAYMENT_APIKEY':
-        roles = ['invoice', 'shopping_cart']
-        sub = 'payment'
+        roles = ['invoices', 'shopping_cart', 'payments']
+        sub = 'payments'
+    else:
+        return {"Message": "API key invalid"}, 401
 
     user = {"id": 0}
 
@@ -220,43 +218,91 @@ def auth_microservice(auth_body_microservice):
     encoded = jwt.encode(payload, SECRET, algorithm="HS256")
     return encoded
 
+def get_discounts_url():
 
-@has_role(['shopping_cart'])
-def cart_pay(amount):
-    # TODO apply discount to amount (call to discount Microservice)
-    discounted_amount = amount
-    return pay(discounted_amount)
+    discounts_address, discounts_port = get_consul_service("discounts")
+    
+    url = "{}:{}".format(discounts_address, discounts_port)
 
+    if not url.startswith("http"):
+        url = "http://{}".format(url)
+    
+    return url
 
-@has_role(['shopping_cart'])
-def rent_pay(amount):
-    # TODO apply discount to amount (call to discount Microservice)
-    discounted_amount = amount
-    return pay(discounted_amount)
+def discounts_request(user_id, amount, target_function):
+    discounts_url = get_discounts_url()
+    url = "{}/api/{}/{}".format(discounts_url, target_function, user_id)
 
-
-@has_role(['shopping_cart'])
-def parking_pay(amount):
-    # TODO apply discount to amount (call to discount Microservice)
-    discounted_amount = amount
-    return pay(discounted_amount)
-
-
-def pay(amount):
     headers = request.headers
-    if 'AUTHORIZATION' in headers:
-        token = headers['AUTHORIZATION'].split(' ')[1]
+    auth_headers = {}
+    if 'Authorization' in headers:
+        auth_headers["Authorization"] = headers['Authorization']
+    
+    amount_data = {"PriceToPay": amount}
+    
+    discounts_response = requests.post(url=url, headers = auth_headers, json=amount_data)
+
+    return discounts_response
+
+@has_role(['shopping_cart'])
+def cart_pay(user_id, amount):
+
+    target_function = "applyDiscountForUserBuyingProduct"
+    discounts_response = discounts_request(user_id, amount['amount'], target_function)
+
+    return pay(user_id, discounts_response)
+
+
+@has_role(['shopping_cart', 'reserve'])
+def rent_pay(user_id, amount):    
+
+    target_function = "applyDiscountForUserRentingBike"
+    discounts_response = discounts_request(user_id, amount['amount'], target_function)
+    
+    return pay(user_id, discounts_response)
+
+
+@has_role(['shopping_cart', 'reserve'])
+def parking_pay(user_id, amount):
+
+    target_function = "applyDiscountForUserPayingParking"
+    discounts_response = discounts_request(user_id, amount['amount'], target_function)
+
+    return pay(user_id, discounts_response)
+
+
+def pay(user_id, discounts_response):
+
+    discounts_response_json = discounts_response.json()
+    
+    if discounts_response.status_code != 200:
+        discounts_response_json["Source of response"] = "Discounts microservice"
+        return discounts_response_json, discounts_response.status_code
+
+    headers = request.headers
+    if 'Authorization' in headers:
+        token = headers['Authorization'].split(' ')[1]
         decoded_token = decode_token(token)
-        user_id = decoded_token['user_details']['id']
+
+        # user_id = decoded_token['user_details']['id']
+        amount = discounts_response.json()
+
+        user = UserPayments.query.filter_by(id=user_id).first()
+        if user is None:
+            user = UserPayments(id=user_id, funds=0)
+            db.session.add(user)
+            # db.session.commit()
+            
+        # print ("Amount:", amount)
         transaction = Transaction(date=datetime.now(),
-                                  amount=amount['amount'],
-                                  user=UserPayments.query.filter_by(id=user_id).first(),
+                                  amount=amount,
+                                  user=user,
                                   completed=True)
         db.session.add(transaction)
         db.session.commit()
         return transaction_to_json(transaction), 200
     else:
-        return {'message': 'pay was not successful'}, 400
+        return {'message': 'Pay was not successful'}, 400
 
 
 connexion_app = connexion.App(__name__, specification_dir="./config/")
@@ -266,22 +312,10 @@ db = SQLAlchemy(app)
 migrate = Migrate(app, db)
 connexion_app.add_api("api.yml")
 
+register_to_consul()
+
 from models import PaymentMethods, UserPayments, Transaction, PayPal, CreditCards, MethodType, CardType
 from functions import *
 
 if __name__ == '__main__':
-    # pp = PayPal(email="name@gmail.com", user_id=0)
-    # pp.set_password("Chronic")
-    # cc = CreditCards(user_id=0,
-    #                  cc_number="4248378499284623",
-    #                  cvc="361",
-    #                  valid_month="06",
-    #                  valid_year="23",
-    #                  card_type=CardType.visa,
-    #                  )
-    # db.session.add(cc)
-    # db.session.add(pp)
-    # db.session.commit()
-    # pms = PaymentMethods.query.filter_by(user_id=0).all()
-    # print(pms)
     connexion_app.run(port=5000, debug=True)
